--- a/src/app/pucar/package.json
+++ b/src/app/pucar/package.json
@@ -12,10 +12,13 @@
     "@types/react-dom": "^17.0.0",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "dotenv": "^8.2.0",
     "global": "^4.4.0",
-    "node-sass": "^5.0.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^10.15.7",
@@ -48,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.43.3",
+    "@types/leaflet": "^1.7.0",
     "@types/react-router-dom": "^5.1.7"
   }
 }
