feat:Adionando página inicial e página de detalhes

--- a/src/app/pucar/package.json
+++ b/src/app/pucar/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,8 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux-persist": "^4.3.1",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "global": "^4.4.0",
     "leaflet": "^1.7.1",
@@ -19,8 +23,11 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tippy": "^1.4.0",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^10.15.7",
     "typeface-poppins": "^1.1.13",
     "typescript": "^4.1.2",
