--- a/src/server/package.json
+++ b/src/server/package.json
@@ -24,6 +24,7 @@
     "multer-azure": "^2.0.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.11",
+    "opencage-api-client": "^1.0.0",
     "sequelize": "^6.3.3",
     "sequelize-auto": "^0.8.2",
     "tedious": "^11.0.3"
