fix: adding pg db to the server

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -25,6 +25,8 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.11",
     "opencage-api-client": "^1.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.3",
     "sequelize-auto": "^0.8.2",
     "tedious": "^11.0.3"
