--- a/src/app/pucar/package.json
+++ b/src/app/pucar/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/leaflet": "^1.7.0",
+    "@types/react-router-dom": "^5.1.7",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -38,6 +40,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13"
   },
   "eslintConfig": {
     "extends": [
